fix position of number on mobile timeline

--- a/styles.css
+++ b/styles.css
@@ -535,7 +535,7 @@
         border-radius: 50%;
         font-size: 36px;
         text-align: center;
-        line-height: 90px;
+        /* line-height: 90px; */
         z-index: 103;
         border: none;
         box-sizing: border-box;
